# stereo-calibration

./: .gitignore  CMakeLists.txt  README.md  calib_intrinsic.cpp  calib_stereo.cpp  read_images.cpp  undistort_rectify.cpp
